--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,7 +1,7 @@
 //COLORS
 $white: #fff;
 $black: #121212;
-$light-grey: #dde6ef;
+$light-blue: #dde6ef;
 $dark-grey: #e9e9de;
 $very-light-grey: #fbf8f8;
 
