--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    border-bottom: 1px solid $light-grey;
+    border-bottom: 1px solid $dark-grey;
     padding: $padding-small;
 
     & .wrapper {
