--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,7 +14,7 @@ body {
 .banner {
     &--text {
         color: $white;
-        font-weight: 300;
+        font-weight: 400;
         letter-spacing: 2px;
         text-align: center;
         text-transform: uppercase;
@@ -35,4 +35,23 @@ body {
             margin-left: 1.6rem;
         } 
     }
+}
+
+.top {
+    font-weight: 500;
+    line-height: 1.6;
+    text-transform: uppercase;
+}
+
+.title {
+    font-size: 5.2rem;
+    font-weight: 500;
+    line-height: 1.6;
+    text-transform: capitalize;
+}
+
+.text {
+    font-weight: 500;
+    line-height: 1.6;
+    margin-bottom: 2.5rem;
 }
