--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -55,3 +55,20 @@ body {
     line-height: 1.6;
     margin-bottom: 2.5rem;
 }
+
+.selected {
+    &--heading {
+        text-transform: uppercase;
+        line-height: 1.6;
+        margin-bottom: 1.6rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        font-size: 2.4rem;
+    }
+
+    &--text {
+        font-weight: 400;
+        line-height: 1.6;
+        margin-bottom: 1.5rem;
+    }
+}
