--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -14,4 +14,33 @@
         background-color: $white;
         color: $black;
     }
+
+    &--empty {
+        color: $black;
+        display: inline-block;
+        font-size: 1.8rem;
+        line-height: 1.6;
+        text-decoration: none;
+        overflow: hidden;
+        transition: all .5s ease;
+        text-transform: uppercase;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0%;
+            bottom: 0%;
+            height: 2px;
+            width: 100%;
+            background-color: $black;
+            transition: all .5s ease;
+        }
+
+        &:hover {
+            &::after {
+                background-color: $dark-grey;
+            }
+        }
+    }
 }
