--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,9 @@ body {
     .cta--empty:hover::after {
       background-color: #e9e9de; }
 
+.grid {
+  display: grid; }
+
 .slide {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -154,7 +157,6 @@ body {
   align-items: center; }
 
 .selected .grid {
-  display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 5rem; }
   .selected .grid__item {
@@ -238,3 +240,16 @@ body {
   .selected__content {
     width: 80%;
     margin: 0rem auto 2.5rem auto; }
+
+.info-bar {
+  background-color: #e9e9de;
+  padding: 5rem 0rem; }
+  .info-bar .wrapper {
+    justify-content: space-between;
+    align-items: center;
+    width: 70%; }
+  .info-bar__item {
+    text-align: center; }
+    .info-bar__item p {
+      line-height: 1.6;
+      margin-top: 1.5rem; }
