--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,3 +1,7 @@
+.grid {
+    display: grid;
+}
+
 .slide {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -37,7 +41,6 @@
 
 .selected {
     & .grid {
-        display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 5rem;
 
