--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 .wrapper {
   display: flex;
   margin: 0% auto;
-  width: 90%;
+  width: 95%;
   max-width: 1600px; }
 
 img {
@@ -89,6 +89,15 @@ body {
   line-height: 1.6;
   margin-bottom: 1.5rem; }
 
+.vendor {
+  color: #999;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem; }
+
+.price {
+  font-weight: 500; }
+
 .cta {
   display: inline-block;
   background-color: #121212;
@@ -124,6 +133,46 @@ body {
       transition: all .5s ease; }
     .cta--empty:hover::after {
       background-color: #e9e9de; }
+  .cta--product {
+    display: inline-block;
+    color: #121212;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    font-weight: 700;
+    transition: all .5s ease;
+    line-height: 1.6;
+    margin-bottom: 1rem; }
+    .cta--product::after {
+      content: '';
+      position: absolute;
+      left: -100%;
+      bottom: 0%;
+      height: 2px;
+      width: 100%;
+      background-color: #121212;
+      transition: all .5s ease; }
+    .cta--product:hover::after {
+      left: 0%; }
+
+.button {
+  background-color: #e9e9de;
+  border: none;
+  border-radius: 50%;
+  color: #121212;
+  cursor: pointer;
+  display: inline-block;
+  outline-width: 0;
+  height: 5rem;
+  width: 5rem; }
+  .button--left {
+    position: absolute;
+    top: 0%;
+    left: 0%; }
+  .button--right {
+    position: absolute;
+    top: 0%;
+    right: 0%; }
 
 .grid {
   display: grid; }
@@ -170,6 +219,64 @@ body {
       margin: 2.5rem auto 0rem auto; }
     .selected .grid__item--2 .selected__img {
       order: 1; }
+
+.new-in-shop .grid {
+  grid-template-columns: repeat(8, 1fr);
+  column-gap: 2rem;
+  width: 100%;
+  overflow: hidden;
+  margin-top: 5rem; }
+  .new-in-shop .grid__item {
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column; }
+    .new-in-shop .grid__item .product {
+      height: 100%;
+      width: 100%;
+      text-decoration: none; }
+      .new-in-shop .grid__item .product img {
+        height: auto;
+        width: 100%;
+        object-fit: cover; }
+      .new-in-shop .grid__item .product__image {
+        position: relative;
+        margin-bottom: 3.5rem; }
+        .new-in-shop .grid__item .product__image .custom-tag {
+          background-color: #121212;
+          color: #fff;
+          display: inline-block;
+          text-decoration: none;
+          font-size: 1.3rem;
+          font-weight: 300;
+          line-height: 1.4;
+          text-transform: uppercase;
+          padding: .5rem;
+          position: absolute;
+          left: 50%;
+          top: 97%;
+          transform: translateX(-50%); }
+      .new-in-shop .grid__item .product__content {
+        text-align: center; }
+
+.home-section-grid .grid {
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 35% 65%;
+  width: 45%; }
+  .home-section-grid .grid__item {
+    height: 100%;
+    width: 100%; }
+    .home-section-grid .grid__item--1 {
+      grid-column: 1 / 10;
+      grid-row: 1 / -1; }
+      .home-section-grid .grid__item--1 img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover; }
+    .home-section-grid .grid__item--2 {
+      grid-column: 8 / -1;
+      grid-row: 2 / -1; }
 
 .header {
   border-bottom: 1px solid #e9e9de;
@@ -250,6 +357,24 @@ body {
     width: 70%; }
   .info-bar__item {
     text-align: center; }
+    .info-bar__item .fa-paper-plane,
+    .info-bar__item .fa-lock,
+    .info-bar__item .fa-mobile-alt {
+      font-size: 2.5rem; }
     .info-bar__item p {
       line-height: 1.6;
       margin-top: 1.5rem; }
+
+.new-in-shop {
+  padding: 10rem 0rem; }
+  .new-in-shop .wrapper {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    position: relative; }
+
+.home-section-grid {
+  background-color: #fbf8f8;
+  padding: 7.5rem 0rem; }
+  .home-section-grid .wrapper {
+    justify-content: space-between; }
