--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -72,3 +72,14 @@ body {
         margin-bottom: 1.5rem;
     }
 }
+
+.vendor {
+    color: #999;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+.price {
+    font-weight: 500;
+}
