--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -43,4 +43,57 @@
             }
         }
     }
+
+    &--product {
+        display: inline-block;
+        color: $black;
+        text-decoration: none;
+        position: relative;
+        overflow: hidden;
+        font-weight: 700;
+        transition: all .5s ease;
+        line-height: 1.6;
+        margin-bottom: 1rem;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: -100%;
+            bottom: 0%;
+            height: 2px;
+            width: 100%;
+            background-color: $black;
+            transition: all .5s ease;
+        }
+
+        &:hover {
+            &::after {
+                left: 0%;
+            }
+        }
+    }
+}
+
+.button {
+    background-color: $dark-grey;
+    border: none;
+    border-radius: 50%;
+    color: $black;
+    cursor: pointer;
+    display: inline-block;
+    outline-width: 0;
+    height: 5rem;
+    width: 5rem;
+
+    &--left {
+        position: absolute;
+        top: 0%;
+        left: 0%
+    }
+
+    &--right {
+        position: absolute;
+        top: 0%;
+        right: 0%;
+    }
 }
