--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -63,3 +63,87 @@
         }
     }
 }
+
+.new-in-shop {
+    & .grid {
+        grid-template-columns: repeat(8, 1fr);
+        column-gap: 2rem;
+        width: 100%;
+        overflow: hidden;
+        margin-top: 5rem;
+
+        &__item {
+            
+            width: 350px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+
+            & .product {
+                height: 100%;
+                width: 100%;
+                text-decoration: none;
+                & img {
+                    height: auto;
+                    width: 100%;
+                    object-fit: cover;
+                }
+
+                &__image {
+                    position: relative;
+                    margin-bottom: 3.5rem;
+
+                    & .custom-tag {
+                        background-color: $black;
+                        color: $white;
+                        display: inline-block;
+                        text-decoration: none;
+                        font-size: 1.3rem;
+                        font-weight: 300;
+                        line-height: 1.4;
+                        text-transform: uppercase;
+                        padding: .5rem;
+                        position: absolute;
+                        left: 50%;
+                        top: 97%;
+                        transform: translateX(-50%);
+                    }
+                }
+
+                &__content {
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+
+.home-section-grid {
+    & .grid {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 35% 65%;
+        width: 45%;
+
+        &__item {
+            height: 100%;
+            width: 100%;
+
+            &--1 {
+                grid-column: 1 / 10;
+                grid-row: 1 / -1;
+
+                & img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+    
+            &--2 {
+                grid-column: 8 / -1;
+                grid-row: 2 / -1;
+            }
+        }
+    }
+}
