--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,47 @@ body {
       grid-column: 8 / -1;
       grid-row: 2 / -1; }
 
+.articles .grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 40% 60%;
+  column-gap: 5rem;
+  row-gap: 5rem;
+  height: 80%; }
+  .articles .grid__item {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); }
+    .articles .grid__item__img img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
+    .articles .grid__item__content {
+      background-color: #fff;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column; }
+    .articles .grid__item--1 {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2; }
+    .articles .grid__item--2 {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3; }
+    .articles .grid__item--3 {
+      grid-column: 2 / 3;
+      grid-row: 1 / 3;
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
+      grid-template-rows: repeat(2, 50%); }
+      .articles .grid__item--3 .grid__item__img {
+        grid-column: 1 / -1;
+        grid-row: 1 / -1; }
+      .articles .grid__item--3 .grid__item__content {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3; }
+
 .header {
   border-bottom: 1px solid #e9e9de;
   padding: 2.5rem 0rem; }
@@ -378,3 +419,7 @@ body {
   padding: 7.5rem 0rem; }
   .home-section-grid .wrapper {
     justify-content: space-between; }
+
+.articles {
+  background-color: #fbf8f8;
+  padding: 5rem 0rem; }
