--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -147,3 +147,66 @@
         }
     }
 }
+
+.articles {
+    & .grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 40% 60%;
+        column-gap: 5rem;
+        row-gap: 5rem;
+        height: 80%;
+
+        &__item {
+            height: 100%;
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+
+            &__img {
+                & img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            &__content {
+                background-color: $white;
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
+
+            &--1 {
+                grid-column: 1 / 2;
+                grid-row: 1 / 2;
+            }
+
+            &--2 {
+                grid-column: 1 / 2;
+                grid-row: 2 / 3;
+            }
+
+            &--3 {
+                grid-column: 2 / 3;
+                grid-row: 1 / 3;
+                display: grid;
+                grid-template-columns: repeat(2, 50%);
+                grid-template-rows: repeat(2, 50%);
+
+                & .grid__item__img {
+                    grid-column: 1 / -1;
+                    grid-row: 1 / -1;
+                }
+
+
+                & .grid__item__content {
+                    grid-column: 2 / 3;
+                    grid-row: 2 / 3;
+                }
+            }
+        }
+    }
+}
