--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,93 @@ body {
     top: 0%;
     right: 0%; }
 
+.submit {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  display: inline-block;
+  text-transform: capitalize;
+  font-size: 1.6rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  width: 30%;
+  padding: 1rem 0rem 1rem 2.5rem; }
+  .submit i {
+    display: inline-block;
+    margin-left: 1.5rem; }
+
+.footer {
+  background-color: #121212;
+  color: #fff;
+  padding: 7.5rem 0rem; }
+  .footer .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+  .footer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    border-bottom: 1px solid rgba(251, 248, 248, 0.25);
+    padding-bottom: 10rem; }
+  .footer__links {
+    display: flex; }
+    .footer__links ul {
+      list-style: none; }
+    .footer__links li:not(:last-child) {
+      margin: 0rem 10rem 1.5rem 0rem; }
+    .footer__links a {
+      display: inline-block;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 1.8rem;
+      line-height: 1.6;
+      text-decoration: none;
+      position: relative;
+      overflow: hidden; }
+      .footer__links a::after, .footer__links a::before {
+        content: '';
+        position: absolute;
+        left: -100%;
+        bottom: 0%;
+        height: 2px;
+        width: 100%;
+        background-color: #fff;
+        transition: all .5s ease; }
+      .footer__links a::before {
+        transition-delay: .25s; }
+      .footer__links a:hover::after {
+        left: 100%; }
+      .footer__links a:hover::before {
+        left: 0%; }
+  .footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 5rem;
+    width: 100%; }
+    .footer__bottom ul {
+      list-style: none;
+      display: flex; }
+      .footer__bottom ul li:not(:last-child) {
+        margin-right: 2.5rem; }
+
+.form .input__container {
+  display: flex;
+  width: 100%;
+  margin-top: 3.5rem;
+  border-bottom: 1px solid #fff; }
+
+input[type="email"] {
+  background-color: transparent;
+  border: none;
+  display: block;
+  padding: 1rem;
+  width: 70%;
+  color: #fff; }
+
 .grid {
   display: grid; }
 
@@ -181,6 +268,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 5rem;
+  width: 100%;
   align-items: center; }
   .slide__content {
     display: flex;
@@ -191,19 +279,17 @@ body {
   .slide__img {
     overflow: hidden;
     transform: translateY(5rem);
-    height: 800px;
+    height: 720px !important;
     width: 100%; }
-    .slide__img img {
-      height: 100%;
-      width: 100%;
-      object-fit: cover; }
 
 .active {
   animation: active .5s ease; }
 
 .slider__container {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  justify-content: space-between;
+  width: 100%; }
 
 .selected .grid {
   grid-template-columns: repeat(3, 1fr);
@@ -213,7 +299,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column; }
+    flex-direction: column;
+    height: 75rem; }
     .selected .grid__item--2 .selected__content {
       order: 2;
       margin: 2.5rem auto 0rem auto; }
@@ -382,6 +469,20 @@ body {
   width: 100%;
   background-color: #dde6ef; }
 
+.parallax-parent {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden; }
+
+.parallax-child {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .selected {
   margin-top: 6rem;
   padding: 10rem 0rem; }
@@ -422,4 +523,7 @@ body {
 
 .articles {
   background-color: #fbf8f8;
-  padding: 5rem 0rem; }
+  padding: 10rem 0rem; }
+  .articles .wrapper {
+    align-items: center;
+    justify-content: center; }
