--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -97,3 +97,22 @@
         right: 0%;
     }
 }
+
+.submit {
+    background-color: transparent;
+    border: none;
+    color: $white;
+    display: inline-block;
+    text-transform: capitalize;
+    font-size: 1.6rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    cursor: pointer;
+    width: 30%;
+    padding: 1rem 0rem 1rem 2.5rem;
+
+    & i {
+        display: inline-block;
+        margin-left: 1.5rem;
+    }
+}
