--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -66,16 +66,14 @@
         align-items: center;
         flex-direction: column;
         position: relative;
+        overflow: hidden;
     }
 }
 
 .home-section-grid {
     background-color: $very-light-grey;
     padding: $padding-large;
-
-    & .wrapper {
-        justify-content: space-between;
-    }
+    width: 100%;
 }
 
 .articles {
