--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,13 @@ body {
   font-size: 1.6rem;
   font-weight: 400; }
 
+h3 {
+  font-size: 2.15em;
+  margin-bottom: 2rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  letter-spacing: 2px; }
+
 .banner--text {
   color: #fff;
   font-weight: 400;
@@ -72,7 +79,7 @@ body {
   text-transform: capitalize; }
 
 .text {
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.6;
   margin-bottom: 2.5rem; }
 
@@ -308,12 +315,19 @@ input[type="email"] {
       order: 1; }
 
 .new-in-shop .grid {
+  display: grid;
   grid-template-columns: repeat(8, 1fr);
   column-gap: 2rem;
   width: 100%;
-  overflow: hidden;
+  height: 25rem;
   margin-top: 5rem; }
+  .new-in-shop .grid .flickity-viewport {
+    border: 2px solid red;
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
   .new-in-shop .grid__item {
+    counter-increment: gallery-cell;
     width: 350px;
     display: flex;
     justify-content: space-between;
@@ -324,7 +338,7 @@ input[type="email"] {
       width: 100%;
       text-decoration: none; }
       .new-in-shop .grid__item .product img {
-        height: auto;
+        height: 100%;
         width: 100%;
         object-fit: cover; }
       .new-in-shop .grid__item .product__image {
@@ -348,20 +362,27 @@ input[type="email"] {
         text-align: center; }
 
 .home-section-grid .grid {
+  display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 35% 65%;
-  width: 45%; }
+  grid-template-rows: 35% auto;
+  width: 100%; }
   .home-section-grid .grid__item {
     height: 100%;
     width: 100%; }
+    .home-section-grid .grid__item img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
     .home-section-grid .grid__item--1 {
-      grid-column: 1 / 10;
+      grid-column: 1 / 6;
       grid-row: 1 / -1; }
-      .home-section-grid .grid__item--1 img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover; }
     .home-section-grid .grid__item--2 {
+      grid-column: 5 / 9;
+      grid-row: 2 / -1; }
+    .home-section-grid .grid__item--3 {
+      grid-column: 6 / -1;
+      grid-row: 1 / -1; }
+    .home-section-grid .grid__item--4 {
       grid-column: 8 / -1;
       grid-row: 2 / -1; }
 
@@ -513,13 +534,13 @@ input[type="email"] {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
 
 .home-section-grid {
   background-color: #fbf8f8;
-  padding: 7.5rem 0rem; }
-  .home-section-grid .wrapper {
-    justify-content: space-between; }
+  padding: 7.5rem 0rem;
+  width: 100%; }
 
 .articles {
   background-color: #fbf8f8;
