--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,14 @@ body {
     font-weight: 400;
 }
 
+h3 {
+    font-size: 2.15em;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+
 .banner {
     &--text {
         color: $white;
@@ -51,7 +59,7 @@ body {
 }
 
 .text {
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.6;
     margin-bottom: 2.5rem;
 }
