--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -64,14 +64,22 @@
 
 .new-in-shop {
     & .grid {
+        display: grid;
         grid-template-columns: repeat(8, 1fr);
         column-gap: 2rem;
         width: 100%;
-        overflow: hidden;
+        height: 25rem;
         margin-top: 5rem;
 
+        & .flickity-viewport {
+            border: 2px solid red;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+
         &__item {
-            
+            counter-increment: gallery-cell;
             width: 350px;
             display: flex;
             justify-content: space-between;
@@ -83,7 +91,7 @@
                 width: 100%;
                 text-decoration: none;
                 & img {
-                    height: auto;
+                    height: 100%;
                     width: 100%;
                     object-fit: cover;
                 }
@@ -119,26 +127,37 @@
 
 .home-section-grid {
     & .grid {
+        display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 35% 65%;
-        width: 45%;
+        grid-template-rows: 35% auto;
+        width: 100%;
 
         &__item {
             height: 100%;
             width: 100%;
 
-            &--1 {
-                grid-column: 1 / 10;
-                grid-row: 1 / -1;
+            & img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
 
-                & img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                }
+            &--1 {
+                grid-column: 1 / 6;
+                grid-row: 1 / -1;
             }
     
             &--2 {
+                grid-column: 5 / 9;
+                grid-row: 2 / -1;
+            }
+
+            &--3 {
+                grid-column: 6 / -1;
+                grid-row: 1 / -1;
+            }
+
+            &--4 {
                 grid-column: 8 / -1;
                 grid-row: 2 / -1;
             }
